--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@ layout: default
 
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent">
-        <p align="justify"><center>2019<br><br>
-        <b>A. Hankin</b>, T. Shapira, M. Lui, K. Sangaiah, 
-        M. Hempstead. 
-        <i><b>Evaluation of Non-Volatile Memory Based Last Level Cache Given Modern Use Case Behavior</b></i>. IEEE International Symposium on Workload
-        Characterization (IISWC). 12 pages (143-154). November 4, 2019. <a
+        A. Hankin, T. Shapira, K. Sangaiah, M. Lui and M. Hempstead, "Evaluation of Non-Volatile Memory Based Last Level Cache Given Modern Use Case Behavior," 2019 IEEE International Symposium on Workload Characterization (IISWC), Orlando, FL, USA, 2019, pp. 143-154, doi: 10.1109/IISWC47752.2019.9042051. <a
         href="docs/iiswc2019-final49.pdf">[PDF]</a><a href="docs/IISWC-slides.pdf">[SLIDES]</a>&nbsp;&nbsp;</center></p>	
      </div>
 
