--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
      </div>
 
       <!-- "Publications" tab -->
-     <div id="Publications" class="tabcontent">
+     <div id="Publications" class="tabcontent"><br>
         A. Hankin, T. Shapira, K. Sangaiah, M. Lui and M. Hempstead, "Evaluation of Non-Volatile Memory Based Last Level Cache Given Modern Use Case Behavior," 2019 IEEE International Symposium on Workload Characterization (IISWC), Orlando, FL, USA, 2019, pp. 143-154, doi: 10.1109/IISWC47752.2019.9042051. <a
         href="docs/iiswc2019-final49.pdf">[PDF]</a><a href="docs/IISWC-slides.pdf">[SLIDES]</a>&nbsp;&nbsp;</center></p>	
      </div>
