--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@ layout: default
             Department</a>. I work in the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
             Lab (TCAL)</a> under the advisement of <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Dr. Mark Hempstead</a>. 
 	    <br><br>
-	    My research interests are centered around building modeling and simulation tools to advance the field of computer architecture. I primarily 
-	      focus on next-generation memory systems--those that include emerging nonvolatile memories (NVMs). I have also worked on building tools to study thermal hotspots. <br><br>
+	    My research interests are centered around building modeling and simulation tools to study next-generation memory systems--those that include emerging nonvolatile memories (NVMs). I have also worked on building tools to study thermal hotspots. <br><br>
 
 
 	    Quick links: <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://scholar.google.com/citations?user=a0G2ggYAAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> | <a href="https://github.com/hankin0">GitHub</a> | <a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">TCAL</a><br><br><br>
