--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@ layout: default
       <br>
         <img class="ex2" src="images/just_me_cambodia.png" width='' height='' align="left">
 	      <br>
-	    I am a PhD candidate at <a
-            href="https://www.tufts.edu">Tufts University</a> in the <a
-            href="https://engineering.tufts.edu/ece/">Electrical and Computer Engineering
-            Department</a>. I work in the <a href="https://sites.tufts.edu/tcal/">Tufts Computer Architecture
-            Lab (TCAL)</a> under the advisement of <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Dr. Mark Hempstead</a>. 
-	    My research interests are centered around building architecture-level modeling and simulation tools in the areas of emerging non-volatile memories and thermal hotspots. <br><br>
+	    I am a 4th year Electrical Engineering Ph.D. student at <a
+            href="https://www.tufts.edu">Tufts University</a> advised by <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Prof. Mark Hempstead</a>. 
+	    My research interests vary, but most of my work has been on building architecture-level modeling and simulation tools in the areas of emerging non-volatile memories and thermal hotspots. <br><br>
 
 
 	    Quick links: <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://scholar.google.com/citations?user=a0G2ggYAAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> | <a href="https://github.com/hankin0">GitHub</a> | <a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">TCAL</a><br><br><br>
