--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@ layout: default
 	    My research interests vary, but most of my work has been on building architecture-level modeling and simulation tools in the areas of emerging non-volatile memories and thermal hotspots. <br><br>
 
 
-	    Quick links: <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://scholar.google.com/citations?user=a0G2ggYAAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> | <a href="https://github.com/hankin0">GitHub</a> | <a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">TCAL</a><br><br><br>
+	    Links:&nbsp;<a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://scholar.google.com/citations?user=a0G2ggYAAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> | <a href="https://github.com/hankin0">GitHub</a> | <a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">TCAL</a><br><br><br>
                   <br><br><br><br><br><br><br>
      </div>
 
       <!-- "Publications" tab -->
      <div id="Publications" class="tabcontent"><br>
         A. Hankin, T. Shapira, K. Sangaiah, M. Lui and M. Hempstead, "Evaluation of Non-Volatile Memory Based Last Level Cache Given Modern Use Case Behavior," 2019 IEEE International Symposium on Workload Characterization (IISWC), Orlando, FL, USA, 2019, pp. 143-154, doi: 10.1109/IISWC47752.2019.9042051. <a
-        href="docs/iiswc2019-final49.pdf">[PDF]</a><a href="docs/IISWC-slides.pdf">[SLIDES]</a>&nbsp;&nbsp;</center></p>	
+        href="docs/iiswc2019-final49.pdf">[PDF]</a> <a href="docs/IISWC-slides.pdf">[SLIDES]</a>&nbsp;&nbsp;</center></p>	
      </div>
 
 
