--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@ layout: default
       <br>
         <img class="ex2" src="images/just_me_cambodia.png" width='' height='' align="left">
 	      <br>
-	    I am a 4th year Electrical Engineering Ph.D. student at <a
-            href="https://www.tufts.edu">Tufts University</a> advised by <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Prof. Mark Hempstead</a>. 
+	    I am a 4th year Electrical Engineering Ph.D. student at Tufts University advised by <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Prof. Mark Hempstead</a>. 
 	    My research interests vary, but most of my work has been on building architecture-level modeling and simulation tools in the areas of emerging non-volatile memories and thermal hotspots. <br><br>
 
 
