--- a/index.html
+++ b/index.html
@@ -2,19 +2,9 @@
 layout: default
 ---
 <body>
-<div id="wrap">
-<div class="text">
-<div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'About')" id="defaultOpen">About</button>
-    <button class="tablinks" onclick="openTab(event, 'Publications')">Publications</button>
-    <button class="tablinks" onclick="openTab(event, 'Contact')">Contact</button>
-      <button class="tablinks" onclick="openTab(event, 'Travel')">Travel</button>
-      <button class="tablinks" onclick="openTab(event, 'Extra')">Extra</button>
-      </div>
+	
+	<title> Alexander Hankin </title>
 
-      
-      <!-- "About" tab -->
-      <div id="About" class="tabcontent">
       <br>
         <img class="ex2" src="images/just_me_cambodia.png" width='' height='' align="left">
 	      <br>
@@ -22,59 +12,20 @@ layout: default
 	    My research interests vary, but most of my work has been on building architecture-level modeling and simulation tools in the areas of emerging non-volatile memories and thermal hotspots. <br><br><br>
 
 
-	    Links:&nbsp;&nbsp;<a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://scholar.google.com/citations?user=a0G2ggYAAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> | <a href="https://github.com/hankin0">GitHub</a> | <a href="https://sites.tufts.edu/tcal/people/current-students/#post-845">TCAL</a><br><br><br>
+	    <a href="mailto:alexander.hankin@tufts.edu">Email</a> | <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://github.com/hankin0">GitHub</a> | <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> <br><br><br>
                   <br><br><br><br><br><br><br>
-     </div>
+	
+	<heading>Publications</heading>
+	
+	L. Pentecost*, <b>A. Hankin*</b>, M. Donato, M. Hempstead, G. Y. Wei, and D. Brooks <b>(*joint first authors)</b>, "NVMExplorer: A Framework for Cross-Stack Comparisonsof Embedded Non-Volatile Memory Solutions," <b> under review at MICRO 2021</b>.
 
-      <!-- "Publications" tab -->
-     <div id="Publications" class="tabcontent"><br>
-        A. Hankin, T. Shapira, K. Sangaiah, M. Lui and M. Hempstead, "Evaluation of Non-Volatile Memory Based Last Level Cache Given Modern Use Case Behavior," 2019 IEEE International Symposium on Workload Characterization (IISWC), Orlando, FL, USA, 2019, pp. 143-154, doi: 10.1109/IISWC47752.2019.9042051. <a
-        href="docs/iiswc2019-final49.pdf">[PDF]</a> <a href="docs/IISWC-slides.pdf">[SLIDES]</a>&nbsp;&nbsp;</center></p>	
-     </div>
+	<b>A. Hankin</b>, D. Werner, J. Sebot, K. Vaidyanathan, M. Amiraski, and M. Hempstead, "HotGauge: A Methodology for Characterizing Hotspots in Next Generation Processors," <b> under review at MICRO 2021</b>.
+	
+	<b>A. Hankin</b> and M. Hempstead, "Proposal for a Timing Model of Ion Trap Quantum Architectures," <i> to appear in I too can Quantum! at ISCA 2021</i>.
+	
+	<b>A. Hankin</b>, M. Amiraski, K. Sangaiah, and M. Hempstead, "Toward Faster and More Efficient Training on CPUs Using STT-RAM-based Last Level Cache," 12th Annual Non-Volatile Memories Workshop (NVMW), San Diego, CA, USA, 2021.
+	
+	<b>A. Hankin</b>, T. Shapira, K. Sangaiah, M. Lui and M. Hempstead, "Evaluation of Non-Volatile Memory Based Last Level Cache Given Modern Use Case Behavior," 2019 IEEE International Symposium on Workload Characterization (IISWC), Orlando, FL, USA, 2019, pp. 143-154, doi: 10.1109/IISWC47752.2019.9042051. <a
+        href="docs/iiswc2019-final49.pdf">[PDF]</a> <a href="docs/IISWC-slides.pdf">[SLIDES]</a>&nbsp;&nbsp;</center></p>
 
-
-      <!-- "Contact" tab -->
-     <div id="Contact" class="tabcontent">
-        <p>	
-       	Tufts University <img align='right' src='images/halligan.jpg'><br>
-       	Department of Electrical and Computer Engineering<br>
-       	161 College Ave<br>
-       	Medford, MA 02155<br><br>
-       	Office:&nbsp;105 Halligan Hall<br>
-       	<a href="mailto:alexander.hankin@tufts.edu">alexander.hankin@tufts.edu</a> </p> 
-     </div>
-
-       
-      <!-- "Travel" tab -->
-       <div id="Travel" class="tabcontent">
-             <p>Some pictures from my travels. From
-             left to right: Saigon, Shanghai, Angkor Thom (Siem Reap, Cambodia).</p><br>
-              <center> <div class="row">
-       		<div class="column">
-       		<img src="images/HoChiMinhCity.jpg" height="300" width="220"></td></tr>
-       	</div>
-       		<div class="column">  		
-       		<img src="images/Shanghai.jpg" height="190" width="250"></td></tr>
-       	</div>	
-       		<div class="column">  		
-       		<img src="images/SiemReap.jpg" height="190" width="250"></td></tr>
-       	</div></div></center> 
-
-       </div>
-
-      <!-- "Extra" tab -->
-       <div id="Extra" class="tabcontent">
-         <p> When I'm not doing research, I enjoy drawing and playing guitar. 
-         <!--<br><br>Some of my drawings can be found <a
-         href="https://www.instagram.com/facial_impressions">here</a>. 
-         <br><br>Some of my music can be found <a
-         href="https://soundcloud.com/user-373746472">here</a>. <br><br>
-        -->
-       </div>
-</div>
-
-
-<script type="text/javascript" src="tabs.js"></script>
-
-</div>
 </body>
