--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@ layout: default
 	    <a href="mailto:alexander.hankin@tufts.edu">Email</a> | <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://github.com/hankin0">GitHub</a> | <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> <br><br><br>
                   <br><br><br><br><br><br><br>
 	
-	<heading>Publications</heading>
+	<heading>Publications</heading><br><br>
 	
-	L. Pentecost*, <b>A. Hankin*</b>, M. Donato, M. Hempstead, G. Y. Wei, and D. Brooks <b>(*joint first authors)</b>, "NVMExplorer: A Framework for Cross-Stack Comparisonsof Embedded Non-Volatile Memory Solutions," <b> under review at MICRO 2021</b>.
+	L. Pentecost*, <b>A. Hankin*</b>, M. Donato, M. Hempstead, G. Y. Wei, and D. Brooks <b>(*joint first authors)</b>, "NVMExplorer: A Framework for Cross-Stack Comparisonsof Embedded Non-Volatile Memory Solutions," <b> under review at MICRO 2021</b>.<br><br>
 
-	<b>A. Hankin</b>, D. Werner, J. Sebot, K. Vaidyanathan, M. Amiraski, and M. Hempstead, "HotGauge: A Methodology for Characterizing Hotspots in Next Generation Processors," <b> under review at MICRO 2021</b>.
+	<b>A. Hankin</b>, D. Werner, J. Sebot, K. Vaidyanathan, M. Amiraski, and M. Hempstead, "HotGauge: A Methodology for Characterizing Hotspots in Next Generation Processors," <b> under review at MICRO 2021</b>.<br><br>
 	
-	<b>A. Hankin</b> and M. Hempstead, "Proposal for a Timing Model of Ion Trap Quantum Architectures," <i> to appear in I too can Quantum! at ISCA 2021</i>.
+	<b>A. Hankin</b> and M. Hempstead, "Proposal for a Timing Model of Ion Trap Quantum Architectures," <i> to appear in I too can Quantum! at ISCA 2021</i>.<br><br>
 	
-	<b>A. Hankin</b>, M. Amiraski, K. Sangaiah, and M. Hempstead, "Toward Faster and More Efficient Training on CPUs Using STT-RAM-based Last Level Cache," 12th Annual Non-Volatile Memories Workshop (NVMW), San Diego, CA, USA, 2021.
+	<b>A. Hankin</b>, M. Amiraski, K. Sangaiah, and M. Hempstead, "Toward Faster and More Efficient Training on CPUs Using STT-RAM-based Last Level Cache," 12th Annual Non-Volatile Memories Workshop (NVMW), San Diego, CA, USA, 2021.<br><br>
 	
 	<b>A. Hankin</b>, T. Shapira, K. Sangaiah, M. Lui and M. Hempstead, "Evaluation of Non-Volatile Memory Based Last Level Cache Given Modern Use Case Behavior," 2019 IEEE International Symposium on Workload Characterization (IISWC), Orlando, FL, USA, 2019, pp. 143-154, doi: 10.1109/IISWC47752.2019.9042051. <a
         href="docs/iiswc2019-final49.pdf">[PDF]</a> <a href="docs/IISWC-slides.pdf">[SLIDES]</a>&nbsp;&nbsp;</center></p>
