--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ layout: default
         <img class="ex2" src="images/just_me_cambodia.png" width='' height='' align="left">
 	      <br>
 	    I am a 4th year Electrical Engineering Ph.D. student at Tufts University advised by <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Prof. Mark Hempstead</a>. 
-	    My research interests vary, but most of my work has been on building architecture-level modeling and simulation tools in the areas of emerging non-volatile memories and thermal hotspots. <br><br><br>
+	    My research interests vary, but most of my work has been on building architecture-level modeling and simulation tools in the areas of emerging non-volatile memories and thermal hotspots. 
+	    I have completed research internships at Google and Intel.<br><br><br>
 
 
 	    <a href="mailto:alexander.hankin@tufts.edu">Email</a> | <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://github.com/hankin0">GitHub</a> | <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> <br><br><br>
