--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <body>
 	
-	<title> Alexander Hankin </title>
+	<h1> Alexander Hankin </h1><br>
 
       <br>
         <img class="ex2" src="images/just_me_cambodia.png" width='' height='' align="left">
@@ -16,7 +16,7 @@ layout: default
 	    <a href="mailto:alexander.hankin@tufts.edu">Email</a> | <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://github.com/hankin0">GitHub</a> | <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> <br><br><br>
                   <br><br><br><br><br><br><br>
 	
-	<heading>Publications</heading><br><br>
+	<h2>Publications</h2><br><br><br><br><br><br>
 	
 	L. Pentecost*, <b>A. Hankin*</b>, M. Donato, M. Hempstead, G. Y. Wei, and D. Brooks <b>(*joint first authors)</b>, "NVMExplorer: A Framework for Cross-Stack Comparisonsof Embedded Non-Volatile Memory Solutions," <b> under review at MICRO 2021</b>.<br><br>
 
