--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@ layout: default
 	
 	<h1> Alexander Hankin </h1>
 
-        <img src="images/just_me_cambodia.png" width='247.5px' height='261px' align="left">
+        <img class="ex2" src="images/just_me_cambodia.png" width='247.5px' height='261px' align="left">
 	      <br>
-	    <p class="intro-text">I am a 4th year Electrical Engineering Ph.D. student at Tufts University advised by <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Prof. Mark Hempstead</a>. 
+	    I am a 4th year Electrical Engineering Ph.D. student at Tufts University advised by <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Prof. Mark Hempstead</a>. 
 	    My research interests vary, but most of my work has been on building architecture-level modeling and simulation tools in the areas of emerging non-volatile memories and thermal hotspots. 
 	    I have completed research internships at Google and Intel.<br><br><br>
 
 
 	    <center><a href="mailto:alexander.hankin@tufts.edu">Email</a> | <a href="docs/hankin_CV_12-16-19.pdf">CV</a> | <a href="https://github.com/hankin0">GitHub</a> | <a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> <br><br><br>
-		    <br><br></center></p>
+		    <br><br></center>
 	
 	<h2>Publications</h2>
 	
