--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@ layout: default
 	<b>A. Hankin</b>, M. Amiraski, K. Sangaiah, and M. Hempstead, "Toward Faster and More Efficient Training on CPUs Using STT-RAM-based Last Level Cache," 12th Annual Non-Volatile Memories Workshop (NVMW), San Diego, CA, USA, 2021.<br><br>
 	
 	<b>A. Hankin</b>, T. Shapira, K. Sangaiah, M. Lui and M. Hempstead, "Evaluation of Non-Volatile Memory Based Last Level Cache Given Modern Use Case Behavior," 2019 IEEE International Symposium on Workload Characterization (IISWC), Orlando, FL, USA, 2019, pp. 143-154, doi: 10.1109/IISWC47752.2019.9042051. <a
-        href="docs/iiswc2019-final49.pdf">[PDF]</a> <a href="docs/IISWC-slides.pdf">[SLIDES]</a>&nbsp;&nbsp;</center></p>
+        href="docs/iiswc2019-final49.pdf">[PDF]</a> <a href="docs/IISWC-slides.pdf">[SLIDES]</a> <a href="https://github.com/alexanderhankin/NVM-models">[NVM Models]</a>&nbsp;&nbsp;</center></p>
 
 </body>
