--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 	      <br>
 	    I am a 4th year Electrical Engineering Ph.D. student at Tufts University advised by <a href=https://engineering.tufts.edu/people/faculty/mark-hempstead>Prof. Mark Hempstead</a>. 
 	    My research interests vary, but most of my work has been on building architecture-level modeling and simulation tools in the areas of emerging non-volatile memories and thermal hotspots. 
-	    I have completed research internships at Google and Intel.<br><br><br>
+	    I have completed research internships at Google and Intel.<br><br><br><br>
 
 
 	    <center><a href="mailto:alexander.hankin@tufts.edu">Email</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="docs/hankin_CV_12-16-19.pdf">CV</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://github.com/hankin0">GitHub</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://www.linkedin.com/in/alexanderhankin">LinkedIn</a> <br><br><br>
