--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 	    I have completed research internships at Google and Intel.<br><br><br><br>
 
 
-	    <center><a href="mailto:alexander.hankin@tufts.edu">Email</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="docs/hankin_CV_12-16-19.pdf">CV</a><br><br><br>
+	    <center><a href="mailto:alexander.hankin@tufts.edu">Email</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="docs/alexander_hankin_CV_5-11-21.pdf">CV</a><br><br><br>
 		    <br><br></center>
 	
 	<h2>Publications</h2>
