--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ layout: default
 
 	<b>A. Hankin</b>, D. Werner, J. Sebot, K. Vaidyanathan, M. Amiraski, and M. Hempstead, "HotGauge: A Methodology for Characterizing Hotspots in Next Generation Processors," <b> under review at MICRO 2021</b>.<br><br>
 	
-	<b>A. Hankin</b> and M. Hempstead, "Proposal for a Timing Model of Ion Trap Quantum Architectures," <i> <b>to appear in</b> I too can Quantum! at ISCA 2021</i>.<br><br>
+	<b>A. Hankin</b> and M. Hempstead, "Proposal for a Timing Model of Ion Trap Quantum Architectures," <i> <b>to appear in</b> I too can Quantum! (I2Q) at ISCA 2021</i>.<br><br>
 	
-	<b>A. Hankin</b>, M. Amiraski, K. Sangaiah, and M. Hempstead, "Toward Faster and More Efficient Training on CPUs Using STT-RAM-based Last Level Cache," 12th Annual Non-Volatile Memories Workshop (NVMW), San Diego, CA, USA, 2021.<br><br>
+	<b>A. Hankin</b>, M. Amiraski, K. Sangaiah, and M. Hempstead, "Toward Faster and More Efficient Training on CPUs Using STT-RAM-based Last Level Cache," 12th Annual Non-Volatile Memories Workshop (NVMW), San Diego, CA, USA, 2021.<br>
 	<a href="docs/NVMW_21.pdf">pdf</a><br> <a href="docs/nvmw2021-paper59-poster.pdf">Poster</a><br><br>
 	
 	<b>A. Hankin</b>, T. Shapira, K. Sangaiah, M. Lui and M. Hempstead, "Evaluation of Non-Volatile Memory Based Last Level Cache Given Modern Use Case Behavior," 2019 IEEE International Symposium on Workload Characterization (IISWC), Orlando, FL, USA, 2019, pp. 143-154, doi: 10.1109/IISWC47752.2019.9042051. <br>
